--- a/index.html
+++ b/index.html
@@ -56,77 +56,77 @@
         <a target="_blank" href="https://freesol.biz/?r=10569"><img src="/file/freesol.png" width="468" height="60"></a><p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-          <a href="https://earnmoneyhub.com/?r=10521">5. Cripto.win</a></h3>
+          <a href="https://cripto.win/?r=63305">5. Cripto.win</a></h3>
           <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
-          <a target="_blank" href="https://earnmoneyhub.com/?r=10521"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
+          <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://click4bit.com/?ref=14312">5. Click4bit</a></h3>
+      <a href="https://click4bit.com/?ref=14312">6. Click4bit</a></h3>
       <p>$0.0006 every 10 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">6. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">7. Earnbitmoon</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                          <a href="https://claimbits.net/?ref=167319">7. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+                          <a href="https://claimbits.net/?ref=167319">8. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
          <a target="_blank" href="https://claimbits.net/?ref=167319" >
            <img src="/file/cb1.gif" width="468" height="60"/></a><br>
          <p></p> </div>
 
          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-           <a href="https://coinpot.in/?r=135650">8. Coinpot.in</a></h3>
+           <a href="https://coinpot.in/?r=135650">9. Coinpot.in</a></h3>
                                   <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
              <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
                                   <p></p></div>
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-                      <a href="https://bitcoincyclone.com/?r=3177">9. Bitcoin Cyclone</a></h3>
+                      <a href="https://bitcoincyclone.com/?r=3177">10. Bitcoin Cyclone</a></h3>
                                  <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
                         <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
                                 <p></p></div>
 
                                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                  <a href="https://www.bytecash.in/?r=5691">10. Bytecash</a></h3>
+                                  <a href="https://www.bytecash.in/?r=5691">11. Bytecash</a></h3>
                                   <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
                                     <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
                                   <p></p></div>
 
                                   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                    <a href="https://r.adbtc.top/7297">11. Adbtc.top</a></h3>
+                                    <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
                                     <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
                                       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
                                     <p></p></div>
 
                                   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-                                    <a href="https://cryptowin.io/ref/tsaroz">12. Cryptowin.io</a></h3>
+                                    <a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin.io</a></h3>
                                              <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
                                     <a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
                                       <img src="/file/cwin.png" width="468" height="60"/></a><br>
                                     <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">13. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">14. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">14. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">15. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://fire-crypto.com/?r=13264">15. FireCrypto</a></h3>
+    <a href="https://fire-crypto.com/?r=13264">16. FireCrypto</a></h3>
      <p>$0.001 every 15 min. High reward Shortlinks, Offerwalls. $0.01 withdrawal to FaucetPay.</p>
      <a target="_blank" href="https://fire-crypto.com/?r=13264" >
                       <img src="/file/Firecrypto.gif" width="468" height="60"/></a><br>
