--- a/index.html
+++ b/index.html
@@ -332,11 +332,14 @@
         <a href="https://freesolana.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freesolana 4+ sats 2 mins</a>
        <p></p>
     <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesol 4+ sats 5 mins</a><p></p>
-    <a href="https://safbits.com?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Safbits 3 sats 1 min</a>
-       <p></p>
-    <a href="https://topbtc.tech/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Top tech 4+ sats 10 mins</a><p></p>
+    <a href="https://btcfaucet.x10.bz?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Btc x10 3 sats 1 min</a><p></p>
+    <a href="https://topbtc.tech/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Top tech 5+ sats 10 mins</a><p></p>
+    <a href="https://coinkong.site/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Coinkong 3 sats 1 min</a><p></p>
+    <a href="https://faucetpoint.net?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Faucet point 3 sats 1 min</a><p></p>
 
       </div></div><p></p>
+
+
 
      <div class="w3-container w3-border w3-border-red"> <center> <h4> Solana FaucetPay</h4></center>
     <div class="w3-center">
@@ -345,8 +348,7 @@
   <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Extra Crypto $0.0014 1 min</a><p></p>
   <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Ole faucet $0.00145 3 mins</a><p></p>
   <a href="https://freesolana.top/solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Freesolana $0.002 3 mins</a><p></p>
-  <a href="https://claim4free.ga/sol/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claim4free $0.0012 5 mins</a><p></p>
-
+   <a href="https://claim4free.ga/sol/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Claim4free $0.0012 5 mins</a><p></p>
     </div></div><p></p>
 
     <div class="w3-container w3-border w3-border-red"> <center> <h4> Litecoin FaucetPay </h4> </center>
