--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                    <div class="w3-container w3-border w3-border-red"> <center> <h4> USDT FaucetPay </h4> </center>
                     <div class="w3-center">
                       <a href="https://janads.com?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:60%">janads $0.002 2 mins</a><p></p>
-                      <a href="https://theautofaucet.xyz?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">theautofaucet $0.0017 1 min</a><p></p>
+                      <a href="https://free-usdt.xyz?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:60%">FreeUSDT $0.0018 1 min</a><p></p>
                            </div></div><p></p>
 
     </div>
