--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-      <a href="https://kpanda.co/?r=566">2. Kpanda</a></h3>
-      <p>$0.00075 every 3 mins. PTC, Shortlinks. $0.01 withdrawal to FaucetPay </p>
-      <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a><p></p></div>
+      <a href="https://kingfaucet.xyz/?r=3886">2. King Faucet</a></h3>
+      <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
+      <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
