--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 </div>
 <br>
 <center><p><mark><a href="https://forms.gle/yDUq218tsSH36Cey9"> For questions, complaints, suggestions and requests, contact me by clicking here.</a></mark></p>
-Sponsored Ad:<br>
+Sponsored Ad:<br><a target="_blank" href="https://pasino.com/?user_id=354733"><img src="/file/pasino.gif" width="468" height="60"/></a><br><p></p></div><br>
   <iframe data-aa='1913695' src='//ad.a-ads.com/1913695?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
   <p>ccz.one @ 2021-2022</p></center><br>
 <script async src="//static.getclicky.com/101351040.js"></script>
