--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@ Sponsored Ad:<br><a target="_blank" href="https://pasino.com/?user_id=354733"><i
 			}
 		}
 	}, false)"
-></iframe>
-  <iframe data-aa='1913695' src='//ad.a-ads.com/1913695?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+></iframe></center>
+  <center><iframe data-aa='1913695' src='//ad.a-ads.com/1913695?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
   <p>ccz.one @ 2021-2022</p></center><br>
 <script async src="//static.getclicky.com/101351040.js"></script>
 
