--- a/index.html
+++ b/index.html
@@ -40,99 +40,94 @@
       <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
     </div>
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-      <a href="https://kpanda.co/?r=566">2. Kpanda</a></h3>
-                <p>$0.00075 every 3 mins. PTC, Shortlinks. $0.01 withdrawal to FaucetPay </p>
-        <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a>
-                <p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-      <a href="https://kingfaucet.xyz/?r=3886">3. King Faucet</a></h3>
+      <a href="https://kingfaucet.xyz/?r=3886">2. King Faucet</a></h3>
       <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
       <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://coinpayz.xyz/?r=155318">4. Coinpayz</a></h3>
+      <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
       <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
       <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://freesol.biz/?r=10569">5. Freesol</a></h3>
+        <a href="https://freesol.biz/?r=10569">4. Freesol</a></h3>
         <p>$0.00065 every 5 min. PTC, Shortlinks, Offerwalls. $0.01 to Faucetpay.</p>
         <a target="_blank" href="https://freesol.biz/?r=10569"><img src="/file/freesol.png" width="468" height="60"></a><p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-          <a href="https://cripto.win/?r=63305">6. Cripto.win</a></h3>
+          <a href="https://cripto.win/?r=63305">5. Cripto.win</a></h3>
           <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
           <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://click4bit.com/?ref=14312">7. Click4bit</a></h3>
+      <a href="https://click4bit.com/?ref=14312">6. Click4bit</a></h3>
       <p>$0.0006 every 10 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">8. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">7. Earnbitmoon</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                          <a href="https://claimbits.net/?ref=167319">9. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+                          <a href="https://claimbits.net/?ref=167319">8. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
          <a target="_blank" href="https://claimbits.net/?ref=167319" >
            <img src="/file/cb1.gif" width="468" height="60"/></a><br>
          <p></p> </div>
 
          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-           <a href="https://coinpot.in/?r=135650">10. Coinpot.in</a></h3>
+           <a href="https://coinpot.in/?r=135650">9. Coinpot.in</a></h3>
                                   <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
              <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
                                   <p></p></div>
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-                      <a href="https://bitcoincyclone.com/?r=3177">11. Bitcoin Cyclone</a></h3>
+                      <a href="https://bitcoincyclone.com/?r=3177">10. Bitcoin Cyclone</a></h3>
                                  <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
                         <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
                                 <p></p></div>
 
                                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                  <a href="https://www.bytecash.in/?r=5691">12. Bytecash</a></h3>
+                                  <a href="https://www.bytecash.in/?r=5691">11. Bytecash</a></h3>
                                   <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
                                     <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
                                   <p></p></div>
 
                                   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                    <a href="https://r.adbtc.top/7297">13. Adbtc.top</a></h3>
+                                    <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
                                     <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
                                       <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
                                     <p></p></div>
 
                                   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-                                    <a href="https://cryptowin.io/ref/tsaroz">14. Cryptowin.io</a></h3>
+                                    <a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin.io</a></h3>
                                              <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
                                     <a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
                                       <img src="/file/cwin.png" width="468" height="60"/></a><br>
                                     <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">15. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">14. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">16. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">15. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://fire-crypto.com/?r=13264">17. FireCrypto</a></h3>
+    <a href="https://fire-crypto.com/?r=13264">16. FireCrypto</a></h3>
      <p>$0.001 every 15 min. High reward Shortlinks, Offerwalls. $0.01 withdrawal to FaucetPay.</p>
      <a target="_blank" href="https://fire-crypto.com/?r=13264" >
                       <img src="/file/Firecrypto.gif" width="468" height="60"/></a><br>
@@ -140,14 +135,14 @@
 
 
                       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-                        <a href="https://dinntoks.com/?r=8182">18. Dinntoks</a></h3>
+                        <a href="https://dinntoks.com/?r=8182">17. Dinntoks</a></h3>
                                   <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
                           <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
                                   <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://bitsfree.net/?r=96452">19. Bitsfree</a></h3>
+	<a href="https://bitsfree.net/?r=96452">18. Bitsfree</a></h3>
                          <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
                          <p></p></div>
@@ -155,7 +150,7 @@
 
 
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://pipeflare.io/r/22uo">20. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">19. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>
@@ -165,40 +160,40 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://freebitco.in/?r=5188579">21. Freebitco.in</a></h3>
+    <a href="https://freebitco.in/?r=5188579">20. Freebitco.in</a></h3>
     <p> $0.0002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-<a href="https://firefaucet.win/ref/27478">22. Fire Faucet</a></h3>
+<a href="https://firefaucet.win/ref/27478">21. Fire Faucet</a></h3>
     <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls. Happy hour bonus on weekends.</p>
 <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-<a href="https://coinadster.com/?ref=208315">23. Coinadster</a></h3>
+<a href="https://coinadster.com/?ref=208315">22. Coinadster</a></h3>
                  <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
 <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a>
                  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://simplebits.io/ref/n9Z908pvlxST">24. Simplebits</a></h3>
+    <a href="https://simplebits.io/ref/n9Z908pvlxST">23. Simplebits</a></h3>
           <p>30 min faucet. Gamified mining. A bit hard to learn easy to earn.</p>
     <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
       <img src="/file/simple.gif" width="468" height="60"/></a><br>
       <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">25. Cointiply</a></h3>
+	<a href="http://cointiply.com/r/Jx6Kp">24. Cointiply</a></h3>
         <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>
   <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://satoshihero.com/en/register?r=j2337039">26. Satoshi Hero</a></h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">25. Satoshi Hero</a></h3>
             <p>3+ sats every 30 mins. Offerwalls</p>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>
@@ -206,14 +201,14 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-              <a href="https://btcbunch.com/?r=81391">27. BTC bunch</a></h3>
+              <a href="https://btcbunch.com/?r=81391">26. BTC bunch</a></h3>
                          <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
               <a target="_blank" href="https://btcbunch.com/?r=81391" >
                 <img src="/file/bunch.png" width="468" height="60"/></a><br>
                          <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">28. Vie Faucet</a></h3>
+	<a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">27. Vie Faucet</a></h3>
        <p>$0.0004 every 3 mins. Easy captcha.</p>
 	<a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>
@@ -221,18 +216,25 @@
 
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">29. CoinpayU</a></h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">28. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
           <img src="/file/payu.gif" width="468" height="60"/></a><br>
              <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-              <a href="https://autofaucet.org/r/tsaroz">30. Autofaucet</a></h3>
+              <a href="https://autofaucet.org/r/tsaroz">29. Autofaucet</a></h3>
                    <p>Highest paying shortlins. Withdraw to Faucetpay.</p>
               <a target="_blank" href="https://autofaucet.org/r/tsaroz" >
                 <img src="/file/autofau.png" width="468" height="60"/></a><br>
                    <p></p></div>
+
+                    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+	<a href="https://coincet.com/?r=30824">30. Coincet</a></h3>
+       <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls.</p>
+	<a target="_blank" href="https://coincet.com/?r=30824" >
+    <img src="/file/coincet.png" width="468" height="60"/></a><br>
+       <p></p></div>
 
     </div>
 
