--- a/index.html
+++ b/index.html
@@ -238,10 +238,9 @@
 
     </div>
 
-
-  <div class="panel" id="two-panel">
-     <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
-    No shortlink faucets that pays direct to FaucetPay for solving captcha.<p></p>
+    <div class="panel" id="two-panel">
+      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
+     No shortlink faucets that pays direct to FaucetPay for solving captcha.<p></p>
 
     <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 1 min</p>
 
@@ -252,7 +251,25 @@
             <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
         <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
       </center><p></p></div>
+    <p></p>
+
+
+
+    <div class="w3-container w3-border w3-border-red"> <center> <h4>Cryptorotator Faucets</h4><p> $0.00035 worth of coins every 5 mins</p>
+
+      <div class="w3-bar">
+    <a href="https://cryptorotator.website/ltc_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
+    <a href="https://cryptorotator.website/trx_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Tron</a>
+    <a href="https://cryptorotator.website/gameplay_eth/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
+    <a href="https://cryptorotator.website/doge_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
+    <a href="https://cryptorotator.website/gameplay_bch/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
+    <a href="https://cryptorotator.website/dgb_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
+    <a href="https://cryptorotator.website/gameplay_zec/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Zcash</a>
+    <a href="https://cryptorotator.website/gameplay_dash/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash</a>
+
+    </center><p></p></div>
 <p></p>
+
 
 
     <div class="w3-container w3-border w3-border-red"> <center> <h4>Diamond Faucets</h4><p> $0.00027 worth of coins every 5 mins</p>
