--- a/index.html
+++ b/index.html
@@ -32,62 +32,72 @@
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+      <a href="https://claimercorner.xyz/claimer/?r=29003">1. Claimers corner</a></h3>
+      <p> $0.0007 every 5 mins. $0.001 to FaucetPay.</p>
+      <a href="https://claimercorner.xyz/claimer/?r=29003"  target="_blank" >
+      <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p>
+    </div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://coinkrab.com/refer/user/1799">1. Coinkrab.</a></h3>
+      <a href="https://coinkrab.com/refer/user/1799">2. Coinkrab.</a></h3>
       <p> $0.001 every 5 mins. $0.05 to FaucetPay</p>
       <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
       <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
     </div>
 
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-      <a href="https://kingfaucet.xyz/?r=3886">2. King Faucet</a></h3>
-      <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
-      <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
+
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
       <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
       <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
-
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-          <a href="https://cripto.win/?r=63305">5. Cripto.win</a></h3>
-          <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
-          <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
+      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+        <a href="https://coinpot.in/?r=135650">4. Coinpot.in</a></h3>
+                               <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
+          <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
+                               <p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://click4bit.com/?ref=14312">6. Click4bit</a></h3>
+      <a href="https://click4bit.com/?ref=14312">5. Click4bit</a></h3>
       <p>$0.0006 every 10 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">7. Earnbitmoon</a></h3>
+      <a href="https://earnbitmoon.club/?ref=145452">6. Earnbitmoon</a></h3>
       <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                          <a href="https://claimbits.net/?ref=167319">8. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+                          <a href="https://claimbits.net/?ref=167319">7. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
          <a target="_blank" href="https://claimbits.net/?ref=167319" >
            <img src="/file/cb1.gif" width="468" height="60"/></a><br>
          <p></p> </div>
 
-         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-           <a href="https://coinpot.in/?r=135650">9. Coinpot.in</a></h3>
-                                  <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
-             <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
-                                  <p></p></div>
+
+
+                                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+                                    <a href="https://kingfaucet.xyz/?r=3886">8. King Faucet</a></h3>
+                                    <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
+                                    <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
 
                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-                      <a href="https://bitcoincyclone.com/?r=3177">10. Bitcoin Cyclone</a></h3>
+                      <a href="https://bitcoincyclone.com/?r=3177">9. Bitcoin Cyclone</a></h3>
                                  <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
                         <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
                                 <p></p></div>
+
+                                <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+                                  <a href="https://cripto.win/?r=63305">10. Cripto.win</a></h3>
+                                  <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
+                                  <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
+
 
                                 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                                   <a href="https://www.bytecash.in/?r=5691">11. Bytecash</a></h3>
