--- a/index.html
+++ b/index.html
@@ -32,91 +32,88 @@
 	  <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	  <img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://claimercorner.xyz/claimer/?r=29003">1. Claimers corner</a></h3>
-      <p> $0.0007 every 5 mins. $0.001 to FaucetPay.</p>
-      <a href="https://claimercorner.xyz/claimer/?r=29003"  target="_blank" >
-      <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p>
-    </div>
-
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://coinkrab.com/refer/user/1799">2. Coinkrab.</a></h3>
-      <p> $0.0008 every 3 mins. $0.05 to FaucetPay</p>
-      <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
-      <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
-    </div>
 
 
 
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://coinpayz.xyz/?r=155318">3. Coinpayz</a></h3>
-      <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
-      <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
-      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-        <a href="https://coinpot.in/?r=135650">4. Coinpot.in</a></h3>
-                               <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
-          <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
-                               <p></p></div>
+<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+<a href="https://coinpayz.xyz/?r=155318">1. Coinpayz</a></h3>
+<p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
+<a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
 
+<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+<a href="https://coinpot.in/?r=135650">2. Coinpot.in</a></h3>
+<p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
+<a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
+<p></p></div>
+
+<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+<a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
+<p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
+<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
+<img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
+
+
+ <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+  <a href="https://claimbits.net/?ref=167319">5. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
+  <a target="_blank" href="https://claimbits.net/?ref=167319" >
+  <img src="/file/cb1.gif" width="468" height="60"/></a><br>
+   <p></p> </div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://click4bit.com/?ref=14312">5. Click4bit</a></h3>
       <p>$0.0006 every 10 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
+          <a href="https://bitcoincyclone.com/?r=3177">6. Bitcoin Cyclone</a></h3>
+          <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
+          <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
+          <p></p></div>
+
+          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+            <a href="https://claimercorner.xyz/claimer/?r=29003">7. Claimers corner</a></h3>
+            <p> $0.0007 every 5 mins. $0.001 to FaucetPay.</p>
+            <a href="https://claimercorner.xyz/claimer/?r=29003"  target="_blank" >
+            <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p></div>
+
+           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+            <a href="https://coinkrab.com/refer/user/1799">8. Coinkrab.</a></h3>
+             <p> $0.0008 every 5 mins. $0.05 to FaucetPay</p>
+             <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
+            <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
+             </div>
+
+
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+     <a href="https://kingfaucet.xyz/?r=3886">9. King Faucet</a></h3>
+       <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
+       <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://earnbitmoon.club/?ref=145452">6. Earnbitmoon</a></h3>
-      <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
-      <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
-      <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
+   <a href="https://cripto.win/?r=63305">10. Cripto.win</a></h3>
+   <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
+    <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
 
-                        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                          <a href="https://claimbits.net/?ref=167319">7. Claimbits</a></h3><p>1.2+ btc satoshi every 5 mins. 1000 sats to FaucetPay. </p>
-         <a target="_blank" href="https://claimbits.net/?ref=167319" >
-           <img src="/file/cb1.gif" width="468" height="60"/></a><br>
-         <p></p> </div>
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+    <a href="https://www.bytecash.in/?r=5691">11. Bytecash</a></h3>
+    <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
+    <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
+    <p></p></div>
 
+  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+  <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
+  <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
+  <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
+  <p></p></div>
 
-
-                                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-                                    <a href="https://kingfaucet.xyz/?r=3886">8. King Faucet</a></h3>
-                                    <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
-                                    <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
-
-                        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-                      <a href="https://bitcoincyclone.com/?r=3177">9. Bitcoin Cyclone</a></h3>
-                                 <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
-                        <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
-                                <p></p></div>
-
-                                <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                  <a href="https://cripto.win/?r=63305">10. Cripto.win</a></h3>
-                                  <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.1 withdrawal to FaucetPay.</p>
-                                  <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
-
-
-                                <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                  <a href="https://www.bytecash.in/?r=5691">11. Bytecash</a></h3>
-                                  <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
-                                    <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
-                                  <p></p></div>
-
-                                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                                    <a href="https://r.adbtc.top/7297">12. Adbtc.top</a></h3>
-                                    <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
-                                      <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
-                                    <p></p></div>
-
-                                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-                                    <a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin.io</a></h3>
-                                             <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
-                                    <a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
-                                      <img src="/file/cwin.png" width="468" height="60"/></a><br>
-                                    <p></p></div>
+  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+  <a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin.io</a></h3>
+  <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
+  <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
+  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">14. Final Dutchy</a></h3>
@@ -140,22 +137,22 @@
                       <p></p></div>
 
 
-                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-                        <a href="https://dinntoks.com/?r=8182">17. Dinntoks</a></h3>
-                                  <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
-                          <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
-                                  <p></p></div>
+  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
+  <a href="https://dinntoks.com/?r=8182">17. Dinntoks</a></h3>
+  <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
+   <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
+   <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
 	<a href="https://bitsfree.net/?r=96452">18. Bitsfree</a></h3>
-                         <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
+   <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
-                         <p></p></div>
+ <p></p></div>
 
 
 
-                         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 	<a href="https://pipeflare.io/r/22uo">19. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
@@ -358,7 +355,7 @@
        <p></p>
     <a href="https://freesol.biz/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Freesol 4+ sats 5 mins</a><p></p>
     <a href="https://btcfaucet.x10.bz?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Btc x10 3 sats 1 min</a><p></p>
-    <a href="https://topbtc.tech/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Top tech 5+ sats 10 mins</a><p></p>
+    <a href="https://receh.win/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Receh 3 sats 3 mins</a><p></p>
     <a href="https://coinkong.site/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Coinkong 3 sats 1 min</a><p></p>
     <a href="https://faucetpoint.net?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Faucet point 3 sats 1 min</a><p></p>
 
