--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-     <a href="https://kingfaucet.xyz/?r=3886">8. King Faucet</a></h3>
-       <p>$0.00085 every 5 mins. PTC. $0.02 withdrawal to FaucetPay and Coinbase.</p>
-       <a target="_blank" href="https://kingfaucet.xyz/?r=3886"><img src="/file/king.png" width="468" height="60"></a><p></p></div>
+     <a href="https://bitcointrophy.com/?r=21954">8. Bitcoin Trophy</a></h3>
+       <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
+       <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://coinkrab.com/refer/user/1799">9. Coinkrab.</a></h3>
