--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-              <a href="https://btcbunch.com/?r=81391">26. BTC bunch</a></h3>
-                         <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
-              <a target="_blank" href="https://btcbunch.com/?r=81391" >
-                <img src="/file/bunch.png" width="468" height="60"/></a><br>
+              <a href="https://gpfaucet.com/?r=11674">26. BTC bunch</a></h3>
+                         <p>$0.0005 every 3 min faucet. shortliks, ptc, offerwalls. Minimum $0.001 to FaucetPay</p>
+              <a target="_blank" href="https://gpfaucet.com/?r=11674" >
+                <img src="/file/gp.png" width="468" height="60"/></a><br>
                          <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
